--- a/wordscape.html
+++ b/wordscape.html
@@ -1,249 +1,290 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Wordscape - Level 1</title>
 <style>
-  * { box-sizing: border-box; }
   body {
     margin: 0;
+    font-family: 'Poppins', sans-serif;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(to top, #a0d8ef 0%, #ffffff 90%);
     overflow: hidden;
-    font-family: "Poppins", sans-serif;
-  }
-  #game {
-    position: relative;
-    width: 420px;
-    height: 700px;
-    background: linear-gradient(to top, #79c3ff 0%, #eaf6ff 100%);
-    border-radius: 30px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.2);
-    overflow: hidden;
-  }
-  #background {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 180px;
-    background: linear-gradient(to top, #4aa96c 0%, #a4e4a0 100%);
-    border-top-left-radius: 50% 30px;
-    border-top-right-radius: 50% 30px;
-  }
-  h1 {
-    text-align: center;
-    color: #ffffff;
-    text-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    margin-top: 20px;
-  }
-  #letters {
-    position: absolute;
-    bottom: 140px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 280px;
-    height: 280px;
-  }
-  .letter {
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    background: radial-gradient(circle at top, #ffffff, #ddeaff);
-    border-radius: 50%;
-    border: 3px solid #5b8fff;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    font-size: 30px;
-    font-weight: bold;
-    color: #2c3e50;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    user-select: none;
-    cursor: pointer;
-    transition: transform 0.1s, background 0.2s;
-  }
-  .letter.active {
-    background: #5b8fff;
-    color: white;
-    transform: scale(1.1);
-  }
-  #word-list {
-    position: absolute;
-    top: 120px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 260px;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
-    gap: 5px;
+    background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
   }
-  .word {
-    font-size: 26px;
-    letter-spacing: 5px;
-    color: #1c3d5a;
-    background: rgba(255,255,255,0.6);
-    padding: 6px 12px;
-    border-radius: 10px;
-    width: 180px;
+
+  .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 50, 100, 0.35);
+    top: 0;
+    left: 0;
+    z-index: 0;
+  }
+
+  .board {
+    position: relative;
+    z-index: 2;
+    width: 320px;
     text-align: center;
-  }
-  #shuffle {
-    position: absolute;
-    bottom: 60px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #5b8fff;
     color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 10px 24px;
-    font-size: 18px;
-    cursor: pointer;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    margin-bottom: 80px;
   }
-  #shuffle:active { transform: translateX(-50%) scale(0.95); }
-  #message {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 32px;
+
+  .word-slot {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    margin-bottom: 20px;
+  }
+
+  .slot {
+    width: 50px;
+    height: 50px;
+    border-bottom: 3px solid rgba(255,255,255,0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 28px;
     font-weight: bold;
-    color: #ffffff;
-    text-shadow: 0 2px 8px rgba(0,0,0,0.4);
-    display: none;
+    color: transparent;
+    transition: 0.3s;
   }
+
+  .slot.filled {
+    color: #fff;
+    text-shadow: 0 0 10px #33ccff;
+  }
+
   canvas {
     position: absolute;
-    bottom: 140px;
-    left: 50%;
-    transform: translateX(-50%);
-    pointer-events: none;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+
+  .letters {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    position: relative;
+    z-index: 2;
+    margin-bottom: 60px;
+  }
+
+  .letter {
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+    background: radial-gradient(circle at top left, #33ccff, #0066cc);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 0 10px #33ccff;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+
+  .letter.active {
+    transform: scale(1.2);
+    box-shadow: 0 0 20px #99e6ff;
+  }
+
+  .controls {
+    position: relative;
+    z-index: 2;
+    margin-bottom: 30px;
+  }
+
+  button {
+    background: rgba(255,255,255,0.2);
+    border: 1px solid rgba(255,255,255,0.4);
+    color: white;
+    font-size: 16px;
+    padding: 8px 16px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  button:hover {
+    background: rgba(255,255,255,0.4);
+  }
+
+  .popup {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0,0,0,0.7);
+    color: white;
+    font-size: 36px;
+    font-weight: bold;
+    display: none;
+    flex-direction: column;
+    z-index: 10;
+  }
+
+  .popup button {
+    margin-top: 20px;
   }
 </style>
 </head>
 <body>
-  <div id="game">
-    <h1>Level 1: WORD</h1>
-    <div id="background"></div>
-    <div id="letters"></div>
-    <canvas id="lineCanvas" width="280" height="280"></canvas>
-    <div id="word-list"></div>
-    <button id="shuffle">🔀 Shuffle</button>
-    <div id="message">Level Complete!</div>
+<div class="overlay"></div>
+<canvas id="lineCanvas"></canvas>
+
+<div class="board">
+  <div id="word1" class="word-slot">
+    <div class="slot"></div>
+    <div class="slot"></div>
+    <div class="slot"></div>
+    <div class="slot"></div>
   </div>
+</div>
+
+<div class="letters" id="letters"></div>
+
+<div class="controls">
+  <button id="shuffleBtn">Shuffle</button>
+</div>
+
+<div class="popup" id="popup">
+  <div>LEVEL COMPLETE!</div>
+  <button onclick="location.reload()">Next Level</button>
+</div>
+
+<audio id="bgMusic" src="https://cdn.pixabay.com/download/audio/2022/03/14/audio_2f558a4f35.mp3?filename=relaxing-music-ambient-110397.mp3" loop></audio>
+<audio id="ding" src="https://cdn.pixabay.com/download/audio/2021/08/04/audio_8f0339c7c3.mp3?filename=correct-2-46134.mp3"></audio>
 
 <script>
-const words = ["WORD", "ROW", "DO", "OR"];
-const foundWords = new Set();
-let letters = ["W", "O", "R", "D"];
-const radius = 110;
-const center = 140;
-const letterContainer = document.getElementById("letters");
-const canvas = document.getElementById("lineCanvas");
-const ctx = canvas.getContext("2d");
-const wordList = document.getElementById("word-list");
-const message = document.getElementById("message");
+const lettersContainer = document.getElementById('letters');
+const canvas = document.getElementById('lineCanvas');
+const ctx = canvas.getContext('2d');
+const slots = document.querySelectorAll('.slot');
+const popup = document.getElementById('popup');
+const bgMusic = document.getElementById('bgMusic');
+const ding = document.getElementById('ding');
 
-const bgMusic = new Audio("https://cdn.pixabay.com/audio/2023/03/01/audio_5bff9e9321.mp3");
-bgMusic.loop = true;
-bgMusic.volume = 0.2;
-bgMusic.play();
+const validWords = ["WORD", "ROW", "OR", "DO"];
+const letters = ["W", "O", "R", "D"];
 
-const clickSound = new Audio("https://cdn.pixabay.com/audio/2022/03/15/audio_1b8b7e88ac.mp3");
-const correctSound = new Audio("https://cdn.pixabay.com/audio/2022/03/15/audio_5f6fa1b3bb.mp3");
-const winSound = new Audio("https://cdn.pixabay.com/audio/2022/10/27/audio_8f48a45e9c.mp3");
+let currentWord = "";
+let usedWords = [];
+let letterElements = [];
+let dragging = false;
+let lastPos = null;
 
-function createLetters() {
-  letterContainer.innerHTML = "";
-  const step = (2 * Math.PI) / letters.length;
-  letters.forEach((ch, i) => {
-    const angle = step * i - Math.PI / 2;
-    const x = center + radius * Math.cos(angle) - 40;
-    const y = center + radius * Math.sin(angle) - 40;
-    const el = document.createElement("div");
-    el.className = "letter";
-    el.style.left = `${x}px`;
-    el.style.top = `${y}px`;
-    el.textContent = ch;
-    letterContainer.appendChild(el);
-  });
-}
-createLetters();
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 
-let path = [];
-let drawing = false;
+bgMusic.volume = 0.4;
+bgMusic.play().catch(()=>{});
 
-function drawLine() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  if (path.length < 2) return;
+function drawLine(from, to) {
   ctx.beginPath();
-  ctx.moveTo(path[0][0], path[0][1]);
-  for (let i = 1; i < path.length; i++) ctx.lineTo(path[i][0], path[i][1]);
+  ctx.moveTo(from.x, from.y);
+  ctx.lineTo(to.x, to.y);
+  ctx.strokeStyle = "rgba(0,200,255,0.8)";
   ctx.lineWidth = 6;
-  ctx.strokeStyle = "rgba(100,180,255,0.9)";
   ctx.shadowBlur = 10;
-  ctx.shadowColor = "#88caff";
+  ctx.shadowColor = "#33ccff";
   ctx.stroke();
 }
 
-function checkWord(word) {
-  if (words.includes(word) && !foundWords.has(word)) {
-    foundWords.add(word);
-    const el = document.createElement("div");
-    el.className = "word";
-    el.textContent = word;
-    wordList.appendChild(el);
-    correctSound.currentTime = 0; correctSound.play();
-  }
-  if (foundWords.size === words.length) {
-    message.style.display = "block";
-    winSound.play();
-  }
+function clearLines() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
 }
 
-letterContainer.addEventListener("mousedown", e => {
+function shuffle() {
+  for (let i = letters.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1));
+    [letters[i], letters[j]] = [letters[j], letters[i]];
+  }
+  renderLetters();
+}
+
+function renderLetters() {
+  lettersContainer.innerHTML = "";
+  letters.forEach(letter => {
+    const el = document.createElement("div");
+    el.className = "letter";
+    el.textContent = letter;
+    lettersContainer.appendChild(el);
+    letterElements.push(el);
+  });
+}
+
+function resetSlots() {
+  slots.forEach(s => {
+    s.textContent = "";
+    s.classList.remove("filled");
+  });
+}
+
+lettersContainer.addEventListener("mousedown", e => {
   if (e.target.classList.contains("letter")) {
-    drawing = true;
+    dragging = true;
+    currentWord = "";
+    clearLines();
+    lastPos = e.target.getBoundingClientRect();
     e.target.classList.add("active");
-    path = [[e.target.offsetLeft + 40, e.target.offsetTop + 40]];
-    clickSound.currentTime = 0; clickSound.play();
+    currentWord += e.target.textContent;
   }
 });
 
-letterContainer.addEventListener("mousemove", e => {
-  if (!drawing) return;
-  const target = e.target;
-  if (target.classList.contains("letter") && !target.classList.contains("active")) {
-    target.classList.add("active");
-    path.push([target.offsetLeft + 40, target.offsetTop + 40]);
-    clickSound.currentTime = 0; clickSound.play();
-  }
-  drawLine();
+window.addEventListener("mousemove", e => {
+  if (!dragging) return;
+  clearLines();
+  const activeLetters = document.querySelectorAll('.letter.active');
+  let lastBox = null;
+  activeLetters.forEach((l, i) => {
+    const rect = l.getBoundingClientRect();
+    const mid = { x: rect.x + rect.width/2, y: rect.y + rect.height/2 };
+    if (i > 0) drawLine(lastBox, mid);
+    lastBox = mid;
+  });
+  drawLine(lastBox, {x: e.clientX, y: e.clientY});
 });
 
-document.addEventListener("mouseup", () => {
-  if (drawing) {
-    const selected = Array.from(document.querySelectorAll(".letter.active"))
-      .map(l => l.textContent)
-      .join("");
-    checkWord(selected);
-    document.querySelectorAll(".letter").forEach(l => l.classList.remove("active"));
-    path = [];
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+window.addEventListener("mouseup", e => {
+  if (!dragging) return;
+  dragging = false;
+  clearLines();
+  const activeLetters = document.querySelectorAll('.letter.active');
+  currentWord = Array.from(activeLetters).map(l => l.textContent).join("");
+  activeLetters.forEach(l => l.classList.remove("active"));
+
+  if (validWords.includes(currentWord) && !usedWords.includes(currentWord)) {
+    ding.play();
+    usedWords.push(currentWord);
+    const slotRow = document.getElementById("word1").querySelectorAll('.slot');
+    if (currentWord === "WORD") {
+      slotRow.forEach((s, i) => {
+        s.textContent = currentWord[i];
+        s.classList.add("filled");
+      });
+    }
   }
-  drawing = false;
+
+  if (usedWords.includes("WORD") && usedWords.includes("ROW") && usedWords.includes("OR") && usedWords.includes("DO")) {
+    setTimeout(()=> popup.style.display="flex", 500);
+  }
 });
 
-document.getElementById("shuffle").onclick = () => {
-  letters.sort(() => Math.random() - 0.5);
-  createLetters();
-};
+document.getElementById('shuffleBtn').addEventListener('click', shuffle);
+renderLetters();
 </script>
 </body>
 </html>
